force-app/main/default/objects/DataCloudSyncProgress__c/DataCloudSyncProgress__c.object-meta.xml
<CustomObject>
    <label>Data Cloud Sync Progress</label>
    <pluralLabel>Data Cloud Sync Progress</pluralLabel>
    <nameField>
        <label>Partition Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>