force-app/main/default/objects/DataCloudSyncProgress__c/fields/LastBatchStarted__c.field-meta.xml
<CustomField>
    <fullName>LastBatchStarted__c</fullName>
    <label>Last Batch Started</label>
    <type>DateTime</type>
</CustomField>