force-app/main/default/objects/DataCloudSyncProgress__c/fields/PartitionId__c.field-meta.xml
<CustomField>
    <fullName>PartitionId__c</fullName>
    <label>Partition ID</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>