force-app/main/default/objects/DataCloudSyncProgress__c/fields/TotalBulkAPICalls__c.field-meta.xml
<CustomField>
    <fullName>TotalBulkAPICalls__c</fullName>
    <label>Total Bulk API Calls</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>