force-app/main/default/objects/DataCloudSyncProgress__c/fields/TotalProcessed__c.field-meta.xml
<CustomField>
    <fullName>TotalProcessed__c</fullName>
    <label>Total Processed</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>